# elvin

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_1.1.0.md  CHANGELOG_1.2.0.md  CHANGELOG_1.2.3.md  CHANGELOG_1.2.4.md  Dockerfile  Dockerfile.deps  Dockerfile.standalone  README.md  STABLE_BASELINE.md  compose.yaml  media-requirements.txt  pyproject.toml  run_local.py  uv.toml
deploy/asterisk/: extensions-elvin.conf.example  websocket-client.conf.example
deploy/server/: elvin-deploy.sh
src/elvin/: __init__.py  __main__.py  config.py  main.py
src/elvin/api/: dependencies.py
src/elvin/api/routes/: auth.py  dashboard.py  media.py  projects.py  robots.py  settings.py  system.py  (+1 more)
src/elvin/core/: security.py
src/elvin/infrastructure/: state_store.py
src/elvin/integrations/: gemini.py  gemini_director.py  gemini_live.py  lptracker.py  voices.py
src/elvin/media/: asterisk_bridge.py  audio.py  background_audio.py  conversation_audio.py  runtime.py  turn_detector.py
src/elvin/observability/: frame_trace.py  timeline.py
src/elvin/services/: call_outcomes.py  call_queue.py  conversation_effects.py
src/elvin/web/: index.html
tests/: test_audio.py  test_audio_echo_guard.py  test_background_audio.py  test_call_outcomes.py  test_call_queue_outcomes.py  test_config_and_catalog.py  test_conversation_audio_effects.py  test_conversation_effects.py  test_director_runtime.py  test_effects_ui_contract.py  test_gemini_director.py  test_gemini_turn_race.py  test_lptracker_stage_move.py  test_media_bridge.py  test_state_outcome_fields.py  test_turn_architecture.py
(+2 files in other folders)
