[project]
name = "elvin"
version = "1.2.2"
description = "Production-ready backend for AI outbound voice calls"
readme = "README.md"
authors = [
    { name = "Evgenijyar", email = "evgenijyar@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
]


[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
